--- a/index.html
+++ b/index.html
@@ -1,25 +1,76 @@
 <!DOCTYPE html>
-<html lang="'en-US">...</html>
- <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">  
-    <title>Nicole Van Scheltema | WDD 130</title>
+<header lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>"whitewater rafting team building | the super rafters | Home"</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
- <body>
-    <header>
-        <nav>
-          <a href="#">Home</a>
-          <a href="wwr/">White Water Rafting Website</a>
-          <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-        </nav>
-      </header>
-      <main>
-        <h1>Nicole Van Scheltema | WDD 130</h1>
-  <img src="images/profile.jpg" alt="Hello, my name is Xavier Rodriquez" width="200">
-  <p>Hello! My name is Nicole Van Scheltema and I am from Port ELizabeth, South Africa. I enjoy the outdoors and spending time with my family ... </p>
-      </main>
-      <footer>
-        <p>©️2024 ❤️ Nicole Van Scheltema ❤️ Port Elizabeth, SOuth Africa </p>
-      </footer>
- </body>
+<body>
+    <div id="content">
+         <header>
+           <a id="logo_link"  href="index.html"> 
+              <img class="logo" src="images/logo.jpg" alt="the super rafters">
+  </a>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="site-plan-rafting.html">site plan</a>
+  </nav>
+
+</header>
+<div id="hero">
+    <div id="hero-box">
+        <img id="hero-img" src="images/hero.png" alt="people enjoying white water rafting">
+    </div>
+    <section id="hero-msg">
+        <h1 class="home-title">have an adventure</h1>
+        <h4> make life long memories with the super rafters</h4>
+        <div class="button-box">
+            <a class='book' href="contactus.html">Book Now</a>
+        </div>
+    </section>
+</div>
+<main class="home-grid">
+    <section class="rivers-card">
+        <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+        <img class="icon" src="images/river_icon.png" alt="river icon">
+        <h2>Rivers</h2>
+    </section>
+    <section class="camping-card">
+        <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+        <img class="icon" src="images/fire_icon.png" alt="fire icon">
+        <h2>Camping</h2>
+    </section>
+    <div id="background"></div>
+    <section class="rapids-card">
+        <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+        <img class="icon" src="images/oars.png" alt="oars icon">
+        <h2>Rapids</h2>
+    </section>
+    <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
+    <section class="msg">
+        <h2>More than just an outing</h2>
+        <p>Enjoy the beautiful scenery surrounding the river, magestic trees and forestry will quite simply take your breath away. </p>
+        <a class='join' href="rivers.html">Join Us</a>
+    </section>
+</main>
+<footer>
+    <p>Super Rafters &copy; 2023 - Nicole Van Scheltema</p>
+    <p><a href="site-plan-rafting.html">Site Plan</a></p>
+    <p><a href="contactus.html">Contact Us</a></p>
+    <div class="social">
+        <a href="https://facebook.com" target="_blank">
+            <img src="images/facebook.png" alt="fb icon">
+        </a>
+        <a href="https://twitter.com" target="_blank">
+            <img src="images/twitter.png" alt="twitter icon">
+        </a>
+        <a href="https://instagram.com" target="_blank">
+            <img src="images/instagram.png" alt="instagram icon">
+        </a>
+    </div>
+</footer>
+    
+</body>
 </html>
