--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>"whitewater rafting team building | the super rafters | Home"</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-
-
-<header>
-  <a id="logo_link"  href="index.html"> 
-    <img class="logo" src="images/logo.jpg" alt="the super rafters">
+    <div id="content">
+         <header>
+           <a id="logo_link"  href="index.html"> 
+              <img class="logo" src="images/logo.jpg" alt="the super rafters">
   </a>
   <nav>
     <a href="index.html">Home</a>
@@ -42,6 +42,7 @@
         <img class="icon" src="images/fire_icon.png" alt="fire icon">
         <h2>Camping</h2>
     </section>
+    <div id="background"></div>
     <section class="rapids-card">
         <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
         <img class="icon" src="images/oars.png" alt="oars icon">
@@ -50,7 +51,7 @@
     <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
     <section class="msg">
         <h2>More than just an outing</h2>
-        <p>Enjoy the beautiful scenery surrounding the river, magestic trees and forestry will quite simply take your brreath away. </p>
+        <p>Enjoy the beautiful scenery surrounding the river, magestic trees and forestry will quite simply take your breath away. </p>
         <a class='join' href="rivers.html">Join Us</a>
     </section>
 </main>
@@ -59,13 +60,13 @@
     <p><a href="site-plan-rafting.html">Site Plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
-        <a href="https://facebook.com">
+        <a href="https://facebook.com" target="_blank">
             <img src="images/facebook.png" alt="fb icon">
         </a>
-        <a href="https://twitter.com">
+        <a href="https://twitter.com" target="_blank">
             <img src="images/twitter.png" alt="twitter icon">
         </a>
-        <a href="https://instagram.com">
+        <a href="https://instagram.com" target="_blank">
             <img src="images/instagram.png" alt="instagram icon">
         </a>
     </div>
