--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"whitewater rafting team building | the super rafters | Home"</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <title>Dry Oar Rafting</title>
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
+
     <div id="content">
+</div>
+
          <header>
            <a id="logo_link"  href="index.html"> 
               <img class="logo" src="images/logo.jpg" alt="the super rafters">
